ghost/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost-ingress
  namespace: ghost
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/server-alias: "www.wir-feiern-mit-eu.ch"
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_cache ghost;
      proxy_cache_use_stale error timeout http_500 http_502 http_503 http_504;
      proxy_cache_background_update on;
      proxy_cache_revalidate on;
      proxy_cache_lock on;
      add_header X-Cache-Status $upstream_cache_status;
spec:
  tls:
    - hosts:
        - ghost.512.ch
        - www.wir-feiern-mit-eu.ch
      secretName: ghost-tls
  rules:
    - host: ghost.512.ch
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: ghost
              port:
                number: 80
